--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
   cloud:
     config:
       server:
-        native:
-          search-locations: C:\temp\
+        git:
+          uri: https://github.com/FabioNazario/configServer/blob/main/config.yml
     
